package LEBOCQTitouan.edu.model.commands.planet.factory;

public class PlanetCommandFactory {
}
