package LEBOCQTitouan.edu.model.commands.shockwave.factory;

public class ShockwaveCommandFactory {
}
