package LEBOCQTitouan.edu.model.entities;

public class Shockwave {
}
